have titles and images for each of the movies loaded

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Countdown maths game</title>
-  <body>
-    <main>
-        <h1>Countdown</h1>
-        <div class="nums">        
-          <button onclick="getRndInteger(0, 10)">get random int</button>
-          <script>
-            function getRndInteger(min, max) {
-              console.log(Math.floor(Math.random() * (max - min + 1) ) + min);
-            }
-          </script>
+{% extends "layout.html" %}
 
-        </div>
-    </main>
-  </body>
-</html>
+{% block content %}
+<div>
+    {% for movie in popular_movies['results']: %}
+    <p>{{ movie['original_title'] }}</p>
+    <img src="{{ 'https://image.tmdb.org/t/p/w500' + movie['poster_path']}} " alt="image">
+    {% endfor %}
+</div>
+{% endblock content %}
