--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,15 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div>
+<div class="movies_grid" >
     {% for movie in popular_movies['results']: %}
-    <p>{{ movie['original_title'] }}</p>
-    <img src="{{ 'https://image.tmdb.org/t/p/w500' + movie['poster_path']}} " alt="image">
+    <div class="movies" >
+        <img class="movies_image" src="{{ 'https://image.tmdb.org/t/p/w500' + movie['poster_path']}} "  width="200" height="auto" alt="image">
+        <div class="description">
+            <h2 class="movies_title">{{ movie['original_title'] }}</h2>
+            <p
+        </div>
+    </div>
     {% endfor %}
 </div>
 {% endblock content %}
