--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="movies_grid" >
     {% for movie in popular_movies['results']: %}
-    <div class="movies" >
+    <div class="movies stacked" >
         <img class="movies_image" src="{{ 'https://image.tmdb.org/t/p/w500' + movie['poster_path']}} "  width="200" height="auto" alt="image">
         <div class="description">
             <h2 class="movies_title">{{ movie['original_title'] }}</h2>
