--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Movie app</title>
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Oswald">
   <body>
     {% block content %}
 
