--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,22 @@
 .movies_grid{
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   grid-auto-rows: minmax(370px, auto);
   justify-content: center;
-  
+  align-content: center;
+  margin: 2rem;
 }
 
-
+h1{
+  font-family: 'Oswald', serif;
+  font-size: 50px;
+}
 .movies{
+  display: grid;
   width: 200px;
   height: auto;
+  justify-content: space-around;
 }
 
 .description {
