have routing set up for all of the popular movies on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,16 @@
 <h1>Popular films</h1>
 <div class="movies_grid" >
     {% for movie in popular_movies['results']: %}
-    <div class="movies stacked" >
-        <img class="movies_image" src="{{ 'https://image.tmdb.org/t/p/w500' + movie['poster_path']}} "  width="200" height="auto" alt="image">
-        <div class="description">
-            <h2 class="movies_title">{{ movie['original_title'] }}</h2>
-            <p>{{ movie['release_date'] }}</p>
+    {% set id = movie['id'] | string() %}
+    <a href="/movie/{{movie['id']}}">
+        <div class="movies stacked" >
+            <img class="movies_image" src="{{ 'https://image.tmdb.org/t/p/w500' + movie['poster_path']}} "  width="200" height="auto" alt="image">
+            <div class="description">
+                <h2 class="movies_title">{{ movie['original_title'] }}</h2>
+                <p>{{ movie['release_date'] }}</p>
+            </div>
         </div>
-    </div>
+    </a>
     {% endfor %}
 </div>
 {% endblock content %}
