--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,9 +19,12 @@ h1{
   justify-content: space-around;
 }
 
+a{
+  text-decoration: none;
+}
 .description {
   justify-content: center;
-  color: #FF0000;
+  color: black;
   text-decoration: none;
 }
 
