--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,9 @@
 .movies_grid{
   display: grid;
-  gap: 1rem;
+  gap: .2rem;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   grid-auto-rows: minmax(370px, auto);
-  justify-content: center;
+  justify-content: space-evenly;
   align-content: center;
   margin: 2rem;
 }
@@ -37,4 +37,10 @@ h2{
   object-fit: cover;
   border-radius: 1rem;
   
+}
+
+.top_movie_page{
+  display: grid;
+  justify-content: center;
+  align-content: center;
 }
