the responsive layout and hanburger icon is working just need to get the hambuger menu working now

--- a/static/css/movie_page.css
+++ b/static/css/movie_page.css
@@ -87,3 +87,12 @@ a{
     justify-content: center;
     align-content: center;
     }
+
+@media screen and (max-width:600px) {
+    .backdrop_image{
+        margin: 1rem;
+        padding: 1rem;
+        
+    }
+    
+    }
