ajusted the backround image for individual movie app and am going to see can i get the hamburger menu working now

--- a/static/css/movie_page.css
+++ b/static/css/movie_page.css
@@ -89,10 +89,9 @@ a{
     }
 
 @media screen and (max-width:600px) {
-    .backdrop_image{
+    .top_movie_page{
         margin: 1rem;
         padding: 1rem;
-        
     }
     
     }
