--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
             <div class="search-container">
                 <form method="post" action="{{ url_for('search') }}" class="navbar">
                     <input type="text" id="search"  name='searched' placeholder="search movies...">
-                    <input type="submit">
+                    <input type="submit"  value="search">
                 </form>
             </div>
             <img id="hamburger_image" class="hamburger_image" src="/static/588a64e7d06f6719692a2d11.png" alt="image not found">
