--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -5,12 +5,13 @@ html, body {
 
 h1{
   font-size: 30px;
+  
 }
 ul{
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: aquamarine;
+  background-color: #E84855;
 
 }
 .navbar{
@@ -70,6 +71,47 @@ ul{
   margin: 10px;
 }
 
+.hamburger {
+  float: right;
+  position: relative;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  appearance: none;
+  background:none;
+  outline: none;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  padding: 5px;
+  margin: 15px;
+  margin-right: 25px;
+}
+
+
+
+.hamburger .bar, .hamburger:after, .hamburger:before{
+  content: '';
+  display: block;
+  width: 100%;
+  height: 10px;
+  background-color: black;
+  margin: 6px 8px;
+  transition: 0.4s;
+}
+
+.hamburger.is-active:before{
+  transform: rotate(-45deg) translate(-12px, 12px);
+}
+
+.hamburger.is-active .bar{
+  opacity: 0;
+}
+.hamburger.is-active:after{
+  transform: rotate(45deg) translate(-10px, -9px);
+}
+
 @media screen and (max-width:980px) {
  
   .search-container{
@@ -90,6 +132,10 @@ ul{
     flex-direction: column;
     align-items: center;
     display: none;
+  }
+
+  .hamburger{
+    display: block;
   }
 
 }
