--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,16 +23,15 @@
 
 </header>
 
-<!--
-<nav class="mobile_navbar_container">
+<div class="mobile_navbar_container">
     <ul>
         <li class="mobile_nav"><a href="/">Home</a></li>
         <li class="mobile_nav"><a href="/trending">Trending</a></li>
         <li class="movile_nav"><a href="/top_rated">Top rated</a></li>
 
     </ul> 
-</nav>
--->
+</div>
+
 
 <script type="text/javascript" src="{{ url_for('static', filename='js/main.js')}}"></script>
 {% endblock %}
