--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,8 +85,52 @@ h2{
 }
 
 
-@media screen and (min-width:930px) {
+
+
+@media screen and (max-width:500px) {
   
+
+  .movies_grid{
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
+    grid-auto-rows: minmax(80px, auto);
+    justify-content: start ;
+    align-content: center;
+    justify-self: center;
+    margin: 1rem;
+    
+  }
+  
+  .movies{
+    display: grid;
+    width: 140px;
+    height: auto;
+    justify-self: space-around;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 1rem;
+    margin: 2px;
+    padding-bottom: 15px;
+    
+  }
+
+ 
+  h2{
+    font-family: 'Oswald', serif;
+    font-size: 25px;
+    margin: 1;
+    font-weight: 100;
+  }
+
+  p{
+    font-family: 'Oswald', serif;
+    
+    font-weight: 100;
+    justify-content: center;
+
+  }
 
   
  
