--- a/templates/search.html
+++ b/templates/search.html
@@ -16,7 +16,7 @@
                 onerror="this.onerror=null;this.src=' {{url_for('static', filename='No-Image-Placeholder.svg.png')}} ';"
             >
             <div class="description">
-                <h2 class="movies_title">{{ movie['original_title'] }}</h2>
+                <h2 class="movies_title">{{ movie['title'] }}</h2>
                 <p>{{ movie['release_date'] }}</p>
             </div>
         </div>
