--- a/templates/top_rated.html
+++ b/templates/top_rated.html
@@ -9,7 +9,7 @@
         <div class="movies stacked" >
             <img class="movies_image" src="{{ 'https://image.tmdb.org/t/p/w500' + movie['poster_path']}} "  >
             <div class="description">
-                <h2 class="movies_title">{{loop.index}}. {{ movie['original_title'] }}</h2>
+                <h2 class="movies_title">{{loop.index}}. {{ movie['title'] }}</h2>
                 <p>{{ movie['release_date'] }}</p>
             </div>
         </div>
