--- a/static/css/movie_page.css
+++ b/static/css/movie_page.css
@@ -108,6 +108,9 @@ h3{
     margin: 0px;
     text-align: center;
     font-family: 'Oswald', serif;
+    padding: 20px;
+    padding-left: 0px;
+    padding-top: 0px;
 }
 
 .rent{
@@ -162,6 +165,7 @@ h3{
     width: 100%;
     height: 100%;
     border-radius: 1rem;
+    z-index: 98;
 }
 
 
