--- a/static/css/movie_page.css
+++ b/static/css/movie_page.css
@@ -168,6 +168,46 @@ h3{
     z-index: 98;
 }
 
+.collection{
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+
+
+}
+.collection_link{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    
+    text-align: center;
+    width: 300px;
+    height: 50px;
+    
+    text-decoration: none;
+    color: black;
+    background-color: #ff4d4d;
+    border-radius: 1rem;
+    
+    font-family: 'Oswald', serif;
+    box-shadow: 5px 10px 18px #cf7777;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+  
+}  
+
+.collection_link:hover{
+    background-color: #db3c3c;
+}
+
+
+
 
 @media screen and (max-width:600px) {
     .top_movie_page{
