--- a/templates/to_search.html
+++ b/templates/to_search.html
@@ -4,11 +4,14 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
 
 <div class="big_search-container">
-    <h1>Search</h1>
-    <form method="post" action="{{ url_for('search') }}" class="big_searchbox">
-        <input type="text" id="search"  name='searched' placeholder="search movies...">
-        <input type="submit"  value="search">
-    </form>
+    <h1 class="search">Search</h1>
+    <div class="search_bar_container">
+        <form method="post" action="{{ url_for('search') }}" class="big_searchbox">
+            <input type="text" id="search"  name='searched' placeholder="search movies...">
+            <input type="submit"  value="search">
+        </form>
+    </div>
+    
 </div>
 {% endblock content %}
 
