--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,6 +69,10 @@ h2{
   
 }
 
+.search {
+  padding-left: 0;
+  text-align: left;
+}
 .big_search-container h1{
   display: grid;
   justify-content: center;
@@ -76,14 +80,42 @@ h2{
   
 }
 
+.search_bar_container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
 .big_searchbox input[type="text"]{
-  
+  border: 1px black;
+  border-color: black ;
+  border-radius: 2rem;
+  text-align: center;
+ 
 }
 
 .big_searchbox input[type="submit"]{
-  
+  border: 1px black;
+  border-color: black ;
+  border-radius: 2rem;
+  background-color: #ff4d4d;
 }
 
+.big_searchbox input[type="submit"]:hover{
+  background-color: #db3c3c;
+}
+
+@media screen and (min-width:700px) {
+  .big_searchbox input[type="submit"]{
+    width: 500px;
+  }
+}
+
+@media screen and (max-width:700px) {
+  .big_searchbox input[type="submit"]{
+    width: 200px;
+  }
+}
 
 
 
