--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,7 +118,7 @@ h2{
 }
 
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:540px) {
   
 
   .movies_grid{
@@ -130,7 +130,7 @@ h2{
     align-content: center;
     justify-self: center;
     margin: 1rem;
-    padding-left: -10px;
+    padding-left: -5px;
     
   }
   
@@ -166,4 +166,45 @@ h2{
 
   
  
+}
+
+
+@media screen and (max-width:485px) {
+  
+  h1{
+    font-family: 'Oswald', serif;
+    font-size: 40px;
+    margin: .5;
+    padding-left: 10px;
+  }
+
+  .movies_grid{
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+    grid-auto-rows: minmax(80px, auto);
+    justify-content: center ;
+    align-content: center;
+    justify-self: center;
+    margin: 1rem;
+    padding-left: -5px;
+    
+  }
+  
+  .movies{
+    display: grid;
+    width: 120px;
+    height: auto;
+    justify-self: space-around;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    padding: 1rem;
+    margin: 2px;
+    padding-bottom: 15px;
+    
+  }
+
+ 
+
 }
